gcp/app1-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azuregolangapp-deploy
  namespace: app 
spec:
  selector:
    matchLabels:
      app: azuregolangapp
  replicas: 1
  template:
    metadata:
      labels:
        app: azuregolangapp
    spec:
      containers:
      - name: azuregolangapp
        image: kodeval/azuregolangapp
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: azuregolangapp-svc
  namespace: app
spec:
  selector:
    app: azuregolangapp
  ports:
  - port: 80
  type: ClusterIP # LoadBalancer # NodePort #
