gcp/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: azuregolangapp-svc
          servicePort: 80
        path: /go(/|$)(.*)
      - backend:
          serviceName: azureotherapp-svc
          servicePort: 80
        path: /other(/|$)(.*)
  - host: azure.erko.digital # change the IP address here
    http:
      paths:
      - backend:
          serviceName: azuredefaultapp-svc
          servicePort: 80
        path: /
      - backend:
          serviceName: azuregolangapp-svc
          servicePort: 80
        path: /go
      - backend:
          serviceName: azureotherapp-svc
          servicePort: 80
        path: /other
